--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,15 @@
   <modules>
     <module>email</module>
     <module>lamda</module>
+    <module>exception</module>
   </modules>
+  
+  <dependencies>
+  	  <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
