--- a/exception/pom.xml
+++ b/exception/pom.xml
@@ -7,23 +7,20 @@
     <artifactId>javaBase</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>email</artifactId>
-  <name>email</name>
+  <groupId>com.base</groupId>
+  <artifactId>exception</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <name>exception</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-   	<dependency>
-   		 <groupId>com.base</groupId>
-  		<artifactId>exception</artifactId>
-  		 <version>0.0.1-SNAPSHOT</version>
-   	</dependency>
-   	<!-- 邮件 -->
-   <dependency>
-    <groupId>com.sun.mail</groupId>
-    <artifactId>javax.mail</artifactId>
-    <version>1.6.0</version>
-</dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
