--- a/reflex/pom.xml
+++ b/reflex/pom.xml
@@ -7,10 +7,17 @@
     <artifactId>javaBase</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>lamda</artifactId>
-  <name>lamda</name>
+  <artifactId>reflex</artifactId>
+  <name>reflex</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <dependencies>
+    <dependency>
+   	<groupId>com.base</groupId>
+  	<artifactId>exception</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
+   	</dependency>
+  </dependencies>
 </project>
