--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>reflex</module>
     <module>annomation</module>
     <module>log</module>
+    <module>mybatis</module>
   </modules>
   
   <dependencies>
