--- a/mybatis/src/main/resource/jdbc.properties
+++ b/mybatis/src/main/resource/jdbc.properties
@@ -1,6 +1,5 @@
-
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://182.61.35.220:3306/test?useUnicode=true&characterEncoding=UTF8
-username=pxh
-password=pxh123
+driver = com.mysql.jdbc.Driver
+url = jdbc:mysql://192.168.31.184:3306/test?useUnicode=true&characterEncoding=UTF8
+username = root
+password=zenkore12345
 
