--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>annomation</module>
     <module>log</module>
     <module>mybatis</module>
+    <module>spring</module>
   </modules>
   
   <dependencies>
