--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -29,5 +29,23 @@
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>5.1.22</version>
 	</dependency>
+	
+	<!-- 日志 -->
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.0-rc2</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-api</artifactId>
+	    <version>2.0-rc2</version>
+	</dependency>
+
   </dependencies>
 </project>
