--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -8,9 +8,9 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>com.base</groupId>
-  <artifactId>spring</artifactId>
+  <artifactId>webservice</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>spring</name>
+  <name>webservice</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
