--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>log</module>
     <module>mybatis</module>
     <module>spring</module>
+    <module>webservice</module>
   </modules>
   
   <dependencies>
