--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>mybatis</module>
     <module>spring</module>
     <module>webservice</module>
+    <module>design_pattern</module>
   </modules>
   
   <dependencies>
