--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -62,6 +62,6 @@
 <!--   </dependencies> -->
   <modules>
     <module>jdk_webservice</module>
-
-	</modules>
+    <module>cxf_webservice</module>
+  </modules>
 </project>
