--- a/design_pattern/pom.xml
+++ b/design_pattern/pom.xml
@@ -16,4 +16,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <modules>
+  	<module>simple_factory</module>
+  </modules>
 </project>
