--- a/webservice/cxf_webservice/pom.xml
+++ b/webservice/cxf_webservice/pom.xml
@@ -11,5 +11,25 @@
   <packaging>pom</packaging>
   <modules>
     <module>java_first</module>
+    <module>cxf_springWeb</module>
   </modules>
+  
+  <dependencies>
+  	<!-- 配置cxf   -->
+	<dependency>
+	    <groupId>org.apache.cxf</groupId>
+	    <artifactId>cxf-rt-frontend-jaxws</artifactId>
+	    <version>3.2.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.cxf</groupId>
+	    <artifactId>cxf-rt-transports-http</artifactId>
+	    <version>3.2.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.cxf</groupId>
+	    <artifactId>cxf-rt-transports-http-jetty</artifactId>
+	    <version>3.2.0</version>
+	</dependency>
+  </dependencies>
 </project>
