--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <module>spring</module>
     <module>webservice</module>
     <module>design_pattern</module>
-    <module>io_file</module>
+    <module>jihe_demo</module>
   </modules>
   
   <dependencies>
