--- a/spring/spring-demo/src/main/resouces/log4j.properties
+++ b/spring/spring-demo/src/main/resouces/log4j.properties
@@ -1,5 +1,5 @@
 #log4j.rootLogger=info,file
-log4j.rootLogger=DEBUG,stdout,MINA,file
+log4j.rootLogger=DEBUG,MINA
 #log4j.rootLogger=,stdout,file
 log4j.appender.MINA=org.apache.log4j.ConsoleAppender 
 log4j.appender.MINA.layout=org.apache.log4j.PatternLayout    
