--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -13,5 +13,6 @@
     <module>spring-framwork-pom</module>
     <module>spring-framwprk-pom</module>
     <module>spring-demo</module>
+    <module>spring-web-demo</module>
   </modules>
 </project>
