--- a/spring/spring-demo/pom.xml
+++ b/spring/spring-demo/pom.xml
@@ -40,6 +40,13 @@
 	
 	<dependency>
 	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-web</artifactId>
+	     <version>${spring.version}</version>
+	</dependency>
+	
+	
+	<dependency>
+	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-test</artifactId>
 	    <version>${spring.version}</version>
 	    <scope>test</scope>
